--- a/server/http/index.html
+++ b/server/http/index.html
@@ -45,7 +45,7 @@
             display:none;
         }
         
-        #login-username {
+        input#ips_username {
           margin: 20px auto;
           display: none;
           background: rgba(255,255,255,.5);
@@ -174,7 +174,7 @@
                 </ul>
 
             </nav>
-            <form id="ipblogin">
+            <form id="ipblogin" style="text-align:center">
                 <input id="ips_username" type="text" class="input_text" name="ips_username" size="50" tabindex="1">
                 <input id="ips_password" type="password" class="input_text" name="ips_password" size="50" tabindex="2"><br>
                 <button id="dolog">Login</button><br />
