--- a/server/http/index.html
+++ b/server/http/index.html
@@ -45,7 +45,7 @@
             display:none;
         }
         
-        input#ips_username {
+        #ips_username, #ips_password {
           margin: 20px auto;
           display: none;
           background: rgba(255,255,255,.5);
@@ -175,8 +175,8 @@
 
             </nav>
             <form id="ipblogin" style="text-align:center">
-                <input id="ips_username" type="text" class="input_text" name="ips_username" size="50" tabindex="1">
-                <input id="ips_password" type="password" class="input_text" name="ips_password" size="50" tabindex="2"><br>
+                <input id="ips_username" type="text" class="input_text" name="ips_username" size="50" tabindex="1" placeholder="Email Address">
+                <input id="ips_password" type="password" class="input_text" name="ips_password" size="50" tabindex="2" placeholder="Password"><br>
                 <button id="dolog">Login</button><br />
                 <a href="http://forum.ygopro.us/index.php?app=core&module=global&section=register" target="_blank">Register</a><br />
                 <a href="http://forum.ygopro.us/index.php?app=core&module=global&section=lostpass">Forgot Password</a>
