--- a/server/http/index.html
+++ b/server/http/index.html
@@ -50,8 +50,7 @@
           display: none;
           background: rgba(255,255,255,.5);
           border: none;
-          border-radius: 16px;
-          width: 25em;
+          width: 20em;
           padding: .4em;
           text-align: center;
           color: black !important;
@@ -175,8 +174,8 @@
 
             </nav>
             <form id="ipblogin" style="text-align:center">
-                <input id="ips_username" type="text" class="input_text" name="ips_username" size="50" tabindex="1" placeholder="Email Address">
-                <input id="ips_password" type="password" class="input_text" name="ips_password" size="50" tabindex="2" placeholder="Password"><br>
+                <input id="ips_username" type="text" class="launcheronly" name="ips_username" tabindex="1" placeholder="Email Address">
+                <input id="ips_password" type="password" class="launcheronly" name="ips_password" tabindex="2" placeholder="Password"><br>
                 <button id="dolog">Login</button><br />
                 <a href="http://forum.ygopro.us/index.php?app=core&module=global&section=register" target="_blank">Register</a><br />
                 <a href="http://forum.ygopro.us/index.php?app=core&module=global&section=lostpass">Forgot Password</a>
