--- a/server/http/index.html
+++ b/server/http/index.html
@@ -38,6 +38,8 @@
     </script>
 
     <style>
+        .webonly {}
+        
         .web .launcheronly {
             display:none;
         }
@@ -180,15 +182,14 @@
 
             </nav>
             <form id="ipblogin" style="text-align:center">
-                <input id="ips_username" type="text" class="launcheronly loginsystem" name="ips_username" tabindex="1" placeholder="Email Address">
-                <input id="ips_password" type="password" class="launcheronly loginsystem" name="ips_password" tabindex="2" placeholder="Password"><br>
+                <input id="ips_username" type="text" class="launcheronly loginsystem" name="ips_username" tabindex="1" placeholder="Forum Username">
+                <input id="ips_password" type="password" class="launcheronly loginsystem" name="ips_password" tabindex="2" placeholder="Forum Password"><br><br />
                 <button id="dolog" class="launcheronly loginsystem">Login</button><br />
-                <a class="launcheronly loginsystem" href="http://forum.ygopro.us/index.php?app=core&module=global&section=register" target="_blank">Register</a><br />
-                <a class="launcheronly loginsystem" href="http://forum.ygopro.us/index.php?app=core&module=global&section=lostpass">Forgot Password</a>
+                <a class="launcheronly loginsystem" href="http://forum.ygopro.us/index.php?app=core&module=global&section=register" target="_blank">Register via Forum</a> || <a class="launcheronly loginsystem" href="http://forum.ygopro.us/index.php?app=core&module=global&section=lostpass">Forgot Password</a>
             </form>
             <div style="font-size:.5em; text-align:center; color:#747" id="versioninfo">Version 4 : Production 4 : Revision 1</div>
             <div style="font-size:1.5em; text-align:center; color:pink" class='webonly'></div>
-            <div class="weboly">
+            <div class="webonly">
             <SCRIPT language="Javascript">
             var cpmstar_rnd=Math.round(Math.random()*999999);
             var cpmstar_pid=44429;
