--- a/server/http/index.html
+++ b/server/http/index.html
@@ -189,7 +189,7 @@
             </form>
             <div style="font-size:.5em; text-align:center; color:#747" id="versioninfo">Version 4 : Production 4 : Revision 1</div>
             <div style="font-size:1.5em; text-align:center; color:pink" class='webonly'></div>
-            <div class="webonly">
+            <div class="webonly" style="width:728px;margin:0 auto">
             <SCRIPT language="Javascript">
             var cpmstar_rnd=Math.round(Math.random()*999999);
             var cpmstar_pid=44429;
