password system, TOS update, microservice boilderplate

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -277,16 +277,14 @@
                 <br />
                 <label>Disable Shuffle Deck</label>
                 <input type="checkbox" id="disshuffledeck">
+                <label>Use Password</label>
+                <input type="checkbox" id="usepass">
                 <br />
                 <br />
                 <label>Lifepoints</label>
                 <input type="number" value="8000" id="creategamelp" min="1" />
                 <br />
-                <!--
-                        <label>Password</label>
-                        <input type="text" id="creategamepassword" id="creategamepass" max="5" />
-                        <br />
--->
+
                 <div class="button" id="creategameok" onclick='setHostSettings();'>Host</div>
 
             </div>
