--- a/server/http/index.html
+++ b/server/http/index.html
@@ -374,6 +374,17 @@
         </div>
     </header>
     <header style="padding-top:50px" id="duelscreen">
+        <div id="lifepoints">
+            <meter class="p0lp" type="meter" value="8000" max="8000" min="0"></meter>
+            <meter class="p1lp"  type="meter" value="8000" max="8000" min="0"></meter>
+            <span class="p0name"></span>
+            <span class="p1name"></span>
+            <input disabled class="p1lp" value="8000">
+            <input disabled class="p1lp" value="8000">
+            <meter class="p0time" type="meter" value="8000" max="360" min="0"></meter>
+            <meter class="p1time"  type="meter" value="8000" max="360" min="0"></meter>
+            
+        </div>
         <div class="field" id="duelzone">
         <div class="fieldcontainer">
             <div class="fieldimage">
