--- a/server/http/index.html
+++ b/server/http/index.html
@@ -374,6 +374,7 @@
         </div>
     </header>
     <header style="padding-top:50px" id="duelscreen">
+        <div id="ingamechat"></div>
         <div id="lifepoints">
             <meter class="p0lp" type="meter" value="8000" max="8000" min="0"></meter>
             <meter class="p1lp"  type="meter" value="8000" max="8000" min="0"></meter>
