increased visablity of messages

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -23,6 +23,11 @@
    
 
     <style>
+       footer.superfooter.loud {
+          color: white;
+          font-size: 14px;
+          font-weight: bold;
+        }
         .webonly {}
         
         .web .launcheronly {
