--- a/server/http/index.html
+++ b/server/http/index.html
@@ -231,6 +231,7 @@
                     <option value="1">2015.4.1(OCG)</option>
                     <option value="2" >2015.1.1(TCG)</option>
                     <option value="3">2015.1.1(OCG)</option>
+                    <option value="22">Newgioh</option>
                     <option value="21">Goat Format</option>
                     <option value="18">Traditional</option>
                     <option value="19">Unlimited</option>
