--- a/server/http/index.html
+++ b/server/http/index.html
@@ -173,7 +173,7 @@
             </nav>
             <form id="ipblogin" style="text-align:center">
                 <input id="ips_username" type="text" class="launcheronly loginsystem" name="ips_username" tabindex="1" placeholder="Forum Username">
-                <input id="ips_password" type="password" class="launcheronly loginsystem" name="ips_password" tabindex="2" placeholder="Forum Password"><br><br />
+                <input id="ips_password" type="password" class="launcheronly loginsystem" name="ips_password" tabindex="2" placeholder="Forum Password"><br><input type="checkbox" id="#ips_remember">Remember Username &amp; Password?<br />
                 <button id="dolog" class="launcheronly loginsystem">Login</button><br />
                 <a class="launcheronly loginsystem" href="http://forum.ygopro.us/index.php?app=core&module=global&section=register" target="_blank">Register via Forum</a> || <a class="launcheronly loginsystem" href="http://forum.ygopro.us/index.php?app=core&module=global&section=lostpass">Forgot Password</a>
             </form>
