--- a/server/http/index.html
+++ b/server/http/index.html
@@ -171,7 +171,7 @@
                 </ul>
 
             </nav>
-            <form id="ipblogin" style="text-align:center; color: white !important;" class="launcheronly loginsystem">
+            <form id="ipblogin" style="text-align:center; color: white !important; display:block; margin:0 auto" class="launcheronly loginsystem">
                 <input id="ips_username" type="text" class="launcheronly loginsystem" name="ips_username" tabindex="1" placeholder="Forum Username">
                 <input id="ips_password" type="password" class="launcheronly loginsystem" name="ips_password" tabindex="2" placeholder="Forum Password"><br><input type="checkbox" id="ips_remember" > Remember Username &amp; Password?<br />
                 <button id="dolog" class="launcheronly loginsystem">Login</button><br />
