--- a/server/http/index.html
+++ b/server/http/index.html
@@ -199,9 +199,9 @@
         </section>
         <div class='gamelistcenter'>
         <label>Current Deck</label>
-                    <select class='currentdeck'>
-                        <option selected value=""></option>
-                    </select>
+            <select class='currentdeck'>
+                <option selected value=""></option>
+            </select>
         </div>
 
     </header>
@@ -319,14 +319,13 @@
         <div style="color:white; width:970px; margin:0 auto;">
             <section id="settings">
                 <div class='section-content'>
-                    <div style="width:32%; float:left; color:white;">
-                        <p>Auto Placement will have the game automaticlly pick where cards are placed</p>
+                    <div style="width: 29%;float: left;color: #aaa;margin-right: 4vw;font-size: 11px;text-align: justify;">
+                        <p>Auto Placement will have the game automaticlly pick where cards are placed.</p>
                         <p>If Auto Placement is on, you can randomize it.</p>
-                        <p>If you selected multiple cards in response to a chain suggestion. You may have the game automatically pick the resolution order.</p>
-                        <p>If Auto Placement is on, you can randomize it.</p>
+                        <p>If you selected multiple cards in response to a chain suggestion. You may have the game automatically pick the resolution order. If Auto Placement is on, you can randomize it.</p>
                         <p>No (obvious) Delay for Chains, add additional pauses to game play to spook your opponent.</p>
                     </div>
-                    <div style="width:32%; float:left;">
+                    <div style="width:32%; float:left; border-left:1px solid white; padding-left:1vw">
                         
                         <label>Auto Card Placement</label>
                         <input type="checkbox" data-localhost="auto_card_placing" />
@@ -382,8 +381,9 @@
                         <select id="dblist">
                         </select>
                         <br />
-                        <button onclick="createmanifest();">Update Launcher</button>
+                        
                         <br />
+                        <label></label>
                         <button onclick="ygopro('-c')">View YGOPro Folder</button>
                     </div>
                 </div>
