host settings fix

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -80,6 +80,17 @@
   -webkit-animation-iteration-count: 10;
   -webkit-animation-timing-function: linear;
     }
+        .gamelistcenter {
+            width: 30%;
+            margin: 0 auto;
+            border: 1px solid#444;
+            color: silver;
+            padding: 10px;
+        }
+        .gamelistcenter select {
+            background: rgba(0,0,0,.5);
+            color: white;
+        }
 
 @-webkit-keyframes shine
 {
