--- a/server/http/index.html
+++ b/server/http/index.html
@@ -91,6 +91,9 @@
             background: rgba(0,0,0,.5);
             color: white;
         }
+        .web .gamelistcenter {
+            display: none;
+        }
 
 @-webkit-keyframes shine
 {
@@ -205,7 +208,7 @@
 
         <section id='gamelistsection'>
             <div id="gamelistitems"></div>
-            <div class='gamelistcenter'>
+            <div class='launcheronly gamelistcenter'>
             <label>Current Deck </label>
                 <select class='currentdeck'>
                     <option selected value=""></option>
