Current Deck padding
Added very minor padding to the Current Deck to separate from Game List

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -43,6 +43,9 @@
          a.launcheronly.loginsystem {
             color:white;
          }
+		.launcheronly.gamelistcenter {
+			padding-top: 5px;
+		}
         
         #ips_username, #ips_password {
           margin: 20px auto;
