Current Deck *margin*
I'm stupid.

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -44,7 +44,7 @@
             color:white;
          }
 		.launcheronly.gamelistcenter {
-			padding-top: 5px;
+			margin-top: 6px;
 		}
         
         #ips_username, #ips_password {
