Disable lan mode for security reasons

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -131,8 +131,8 @@
             <span style="color:#e4a;">YGOPro</span> Salvation Server</h1>
         </span>
         <ul class="featurelist" style="font-size:small">
-            <li class="launcheronly"><span class="psudolinksingle " onclick='ygopro("-l")'>LAN Mode</span>
-            </li>
+            <!--<li class="launcheronly"><span class="psudolinksingle " onclick='ygopro("-l")'>LAN Mode</span>
+            </li>-->
             <li class="launcheronly"><span class="psudolinksingle" onclick='ygopro("-d")'>Deck Edit</span>
             </li>
             <li class="launcheronly"><span class="psudolinksingle" onclick='ygopro("-r")'>Replays</span>
