--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -62,23 +62,7 @@ box-shadow: 0 0 10px 5px black;
     <script>
         
         $.getScript(sitelocationdir[mode] + "/js/updatesystem.js");
-    </script>
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'http://www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-56840301-1', 'auto');
-        ga('require', 'displayfeatures');
-        ga('send', 'pageview');
+        $.getScript(sitelocationdir[mode] + "/js/vendor/primus.js");
     </script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script>
