fix open in same window
clicked links will now open in external windows

--- a/server/http/interface/index.html
+++ b/server/http/interface/index.html
@@ -29,7 +29,8 @@
         }
         
         win.on('new-win-policy', function (frame, url, policy) {
-            policy.setNewWindowManifest({"frame" : true}));
+            policy.ignore();
+            gui.Shell.openItem(url);
         });
     </script>
     <div id="control">
