--- a/server/http/interface/index.html
+++ b/server/http/interface/index.html
@@ -27,11 +27,13 @@
             maxxed = !maxxed;
             return;
         }
+        setTimeout(function(){
+            win.on('new-win-policy', function (frame, url, policy) {
+                policy.ignore();
+                gui.Shell.openItem(url);
+            });
+        }, 3000);
         
-        win.on('new-win-policy', function (frame, url, policy) {
-            policy.ignore();
-            gui.Shell.openItem(url);
-        });
     </script>
     <div id="control">
         <div onclick="win.close(true);"></div>
