Dropping Mac support

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -176,7 +176,7 @@
                     <li><a href=" http://ygopro.us/setups/client.tar.gz" onclick="_gaq.push(['_trackEvent', 'Site', 'Download', 'Portable']);">Linux32 TarGz/ Windows Portable</a>
 
                     </li>
-                    <li><a href="http://ygopro.us/setups/salvationmac.zip" onclick="_gaq.push(['_trackEvent', 'Site', 'Download', 'Mac']);">Mac OSX 10.7+ App Zip</a>
+                    <li><a href="http://ygopro.us/setups/salvationmac.zip" onclick="_gaq.push(['_trackEvent', 'Site', 'Download', 'Mac']);">Mac OSX 10.7+ App Zip</a> (Not fully supported!)
 
                     </li>
                     
