--- a/client/interface/index.html
+++ b/client/interface/index.html
@@ -27,6 +27,13 @@
             maxxed = !maxxed;
             return;
         }
+        setTimeout(function(){
+            win.on('new-win-policy', function (frame, url, policy) {
+                policy.ignore();
+                gui.Shell.openItem(url);
+            });
+        }, 3000);
+        
     </script>
     <div id="control">
         <div onclick="win.close(true);"></div>
