--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -70,7 +70,7 @@ box-shadow: 0 0 10px 5px black;
         $(function () {
             if (window.self != window.top) {
                 $(document.body).addClass("in-iframe");
-                $('iframe').contents().find('#uniqueID').html(uniqueID)
+                $('iframe').contents().find('#uniqueid').html(uniqueID)
                 var gui = require('nw.gui');
                 gui.Window.get().show();
             }
