--- a/server/http/index.html
+++ b/server/http/index.html
@@ -307,7 +307,14 @@
     </header>
     <header style="padding-top:50px" id="deckedit">
 
-
+<div id="mainDeckHeader"><p>MainDeck</p></div>
+    <div id="mainDeck"></div>
+    
+    <div id="xtraDeckHeader"><p>XtraDeck</p></div>
+    <div id="xtraDeck"></div>
+    
+    <div id="sideDeckHeader"><p>SideDeck</p></div>
+    <div id="sideDeck"></div>
 
     </header>
     <header style="padding-top:50px" id="chat">
