--- a/server/http/index.html
+++ b/server/http/index.html
@@ -111,9 +111,13 @@
     {
         background-position: top left;
     }
-    100%
+    50%
     {
         background-position: top right;
+    }
+    0%
+    {
+        background-position: top left;
     }
 }
     audio#podcast {
