Deck edit visible on web browser

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -166,7 +166,7 @@
         <ul class="featurelist" style="font-size:small">
             <!--<li class="launcheronly"><span class="psudolinksingle " onclick='ygopro("-l")'>LAN Mode</span>
             </li>-->
-            <li class="launcheronly"><span class="psudolinksingle" onclick='ygopro("-d");singlesitenav("deckedit");'>Deck Edit</span>
+            <li><span class="psudolinksingle" onclick='ygopro("-d");singlesitenav("deckedit");'>Deck Edit</span>
             </li>
             <li data-translation-replays class="launcheronly"><span class="psudolinksingle" onclick='ygopro("-r")'>Replays</span>
             </li class="loophole">
