deck edit, moving

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -565,7 +565,7 @@
     <div id="card-container">
         
         </div>
-
+</div>
     </header>
     <header style="padding-top:50px" id="chat">
 
